--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,7 @@
 <div ng-controller="MainCtrl">
   <div class="header">
     <ul class="nav nav-pills pull-right">
+    <li><button class="btn btn-primary" ng-click="clear()">Clear</button></li>
     </ul>
     <h3 class="text-muted">JSON Schema (v4) Validator</h3>
   </div>
@@ -22,6 +23,6 @@
   </div>
 
   <div class="footer">
-    <p><span class="glyphicon glyphicon-heart"></span> from the <a href="http://kbsurfer.com">keyboardsurfer</a></p>
+    <p>♥︎ from the <a href="http://chrismckenzie.io">ChrisMckenzie</a></p>
   </div>
 </div>
